fix: add jspecify annotations